# twitter-client-py

./: Dockerfile  Makefile  README.md  app.py  config.py  dummy.py  pyproject.toml  tweet.py
static/: style.css
templates/: index.html
