[tool.poetry]
name = "twitter-client-py"
version = "0.1.0"
description = ""
authors = ["Rindrics <rindrics@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
tweepy = "^4.10.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
